# p2p-blockchain

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  rustfmt.toml
crates/blockchain/: Cargo.toml
crates/blockchain-types/: Cargo.toml
crates/blockchain-types/benches/: mining.rs
crates/blockchain-types/src/: consts.rs  lib.rs  transaction.rs
crates/blockchain-types/src/block/: mining.rs  mod.rs
crates/blockchain-types/src/wallet/: address.rs  mod.rs  private_key.rs
crates/blockchain/src/: blockchain.rs  chain.rs  lib.rs  orphan_pool.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: block.rs  blockchain.rs  lib.rs  mempool.rs  transaction.rs  wallet.rs
crates/domain/src/blockchain/: block.rs  chain.rs  mod.rs  orphan_pool.rs  transaction.rs  wallet.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: mempool.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  config.rs  lib.rs  messages.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  node.rs
src/: main.rs
