
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A p2p blockchain implementation"
repository = "https://github.com/SamBroomy/p2p-blockchain"
authors = ["SamBroomy"]
readme = "README.md"
publish = false
keywords = ["blockchain", "p2p"]
categories = ["Cryptocurrency"]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = { version = "1.8", features = ["serde"] }
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
serde_valid = "2.0"
rand = { version = "0.8" }
hex = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2.0"
libp2p = { version = "0.56", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "request-response",
    "json",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rayon = "1.11"

blockchain-types = { path = "crates/blockchain-types" }
blockchain = { path = "crates/blockchain" }
mempool = { path = "crates/mempool" }
network = { path = "crates/network" }
node = { path = "crates/node" }

# Dev dependencies
criterion = { version = "0.7", features = ["html_reports"] }
serde_json = { version = "1" }


[workspace.lints.clippy]

multiple_crate_versions = "allow"
# But allow some pedantic lints that might be too strict
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
too_many_arguments = "allow"

#must_use_candidate = "allow" # --fix fixes this
return_self_not_must_use = "allow" # --fix does not fix this
cast_possible_truncation = "allow"
struct_excessive_bools = "allow"
match_same_arms = "allow"

# Specific lints to deny (treat as errors)
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
#unwrap_used = "deny"

#unreadable_literal = "warn"
redundant_else = "warn"
needless_pass_by_value = "warn"


# Nursery lints (experimental but useful)
use_self = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"

# Restrict lints
dbg-macro = "warn"

# Enable Clippy lints for the entire workspace
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
[workspace.lints.rust]
# Standard Rust lints
#smissing_docs = "warn"
#unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"


unused_variables = "allow"
dead_code = "allow"

[profile.bench]
opt-level = 3
lto = "thin"      # Link-time optimization (faster builds than "fat")
codegen-units = 1 # Better optimization, slower build
debug = false     # No debug symbols
