[package]
name = "blockchain-types"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
serde_valid = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[features]
default = ["rayon"]
sse2 = []
rayon = ["dep:rayon", "blake3/rayon"]


[[bench]]
name = "mining"
harness = false


[lints]
workspace = true
