[package]
name = "blockchain"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
blockchain-types = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
