[package]
name = "cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
node = { workspace = true }

[lints]
workspace = true
