[package]
name = "cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blockchain-types = { workspace = true }
futures = { workspace = true }
node = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std"] }
rustyline = { workspace = true }
[lints]
workspace = true
