[package]
name = "mempool"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blake3 = { workspace = true }
blockchain-types = { workspace = true }

[lints]
workspace = true
