[package]
name = "network"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blake3 = { workspace = true }
blockchain-types = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
[lints]
workspace = true
