[package]
name = "node"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
blockchain = { workspace = true }
mempool = { workspace = true }
network = { workspace = true }
serde_json = { workspace = true }
blockchain-types = { workspace = true }
libp2p = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
rand = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
[lints]
workspace = true
